--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <header>PRODUCTO:</header>
 </head>
-<section><img src="./images/celular.png" alt=""></section>
+<body>
+    ><img src="./images/celular.png" alt=""></section>
 <section><ul>
     <li>$110.000</li>
     <li>%15 off</li>
@@ -16,7 +17,5 @@
         <li>"envio gratis"</li>
     </ul>
 </footer>
-<body>
-    
 </body>
 </html>
